# AccuMO

./: .gitignore  LICENSE  README.md
client/: .gitignore  .project  README.md  build.gradle  settings.gradle
client/app/: .project  build.gradle
client/app/src/androidTest/java/com/example/accumo/: ExampleInstrumentedTest.java
client/app/src/main/: AndroidManifest.xml
client/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ncnn-wrapper.cpp
client/app/src/main/cpp/OpenCV-android-sdk/sdk/: .project  build.gradle
client/app/src/main/cpp/depth/: warping.cpp  warping.h
client/app/src/main/cpp/filter/: BasicESKF.c  BasicESKF.h  ErrorStateIMUGPSFuserBase.c  ErrorStateIMUGPSFuserBase.h  INSFilterESKF.c  INSFilterESKF.h  dist.c  dist.h  filter.cpp  filter.h  insfilterErrorState.c  insfilterErrorState.h  insfilterErrorStateCoder_data.c  insfilterErrorStateCoder_data.h  insfilterErrorStateCoder_internal_types.h  insfilterErrorStateCoder_types.h  rotmat.c  rotmat.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  slerp.c  slerp.h
client/app/src/main/cpp/ncnn-20220216-android/armeabi-v7a/include/ncnn/: platform.h
client/app/src/main/cpp/ncnn-20220216-android/x86_64/include/ncnn/: platform.h
client/app/src/main/java/com/example/accumo/: AvcEncoder.java  Depth.java  DepthAccModel.java  DepthAccModelOracle.java  DiskFrameReader.java  Filter.java  MainActivity.java  OfflineEvaluator.java  OptFlow.java  Prefetcher.java  TaskManager.java  Util.java  VoAccModel.java  VoAccModelOracle.java
client/app/src/main/ml/: README.md  fast-depth-sim.tflite  flownet2.tflite
client/app/src/main/proto/: offload_proto.proto
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/main/res/values-night/: themes.xml
client/gradle/wrapper/: gradle-wrapper.properties
scripts/: run_convert_to_yuv.sh
scripts/depth/: get_depth_acc.py
scripts/odom/: angles.py  kitti_error.py  pose_replace.py  scale_per_frame.py
server/: adabins_adapter.py  davo_adapter.py  helper.py  offload_proto_pb2.py  server.py
server/AdaBins/: eval.py  infer.py
server/flownet2-pytorch/: install.sh
(+5 files in other folders)
